--- a/src/components/EmployeeForm.css
+++ b/src/components/EmployeeForm.css
@@ -1,101 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-
-body {
-  margin: 0;
-  font-family: "Poppins", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #f0f0f0;
-  color: #333;
-}
-
-/* Header styles */
-.header {
-  background: linear-gradient(to right, #040940, #0b0f5d);
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  padding: 0 2em;
-  color: white;
-}
-
-.header-content {
-  display: flex;
-  align-items: center;
-}
-
-.header-logo {
-  width: 250px;
-  height: 75px;
-  margin-right: 1em;
-}
-
-/* Form styles */
-.wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #7672dc; /* Background color */
-  background-size: cover;
-  background-position: center;
-}
-
-.form-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 3em;
-  background-color: #7672dc;
-  min-height: 90vh;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin: 2em auto;
-}
-
-h2 {
-  margin-bottom: 1em;
-  color: #040940;
-}
-
-/*.employee-form {
-  width: 80%;
-  max-width: 600px;
-  background: white;
-  padding: 2em;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}*/
-
-/*.form-group {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-  margin-bottom: 1em;
-}*/
-
-.form-group {
-  display: inline-flex;
-  align-items: center;
-  width: 80%;
-  margin-bottom: 1em;
-}
-
-/*label {
-  display: block;
-  margin-bottom: 0.5em;
-  font-weight: bold;
-  color: #040940;
-}*/
-
-
-label {
-  width: 30%; /* Adjust width as needed */
-  margin-right: 1em;
-  font-weight: bold;
-  color: #040940;
-}
 
 input[type='text'],
 input[type='date'],
@@ -186,5 +88,82 @@ button[type='button'].generate-qr-code:hover {
   text-align: center;
 }
 
+.empTable table{
+  width: 97%; 
+  background-color: #9dd7fe9f;
+  border-color: blue;
+}
 
+.addButton button{
+  margin-right: 1ch;
+  margin-bottom: 0.5ch;
+  font-size: 14px; /* Increase font size */
+  width: 150px; /* Set a fixed width for the buttons */
+  height: 35px; /* Set a fixed height for the buttons */
+  text-align: center;
+  font-weight:500;
+  border: none; /* Optional: remove the default button border */
+  border-radius: 5px; /* Optional: add rounded corners */
+  background-color: rgba(99, 147, 189, 0.795); /* Optional: change the background color */
+  color: rgb(4, 4, 69); /* Optional: change the text color */
+  cursor: pointer; /* Optional: change cursor to pointer on hover */
+}
+.addButton button:hover{
+  background-color: rgba(50, 132, 205, 0.795); /* Optional: change background color on hover */
+}
 
+.search{
+ margin-top: 0.5ch;
+ margin-left: 0.5ch;
+ margin-bottom: 1.5ch;
+ font-size: 14px; /* Increase font size */
+ width: 100px; /* Set a fixed width for the buttons */
+ height: 30px; /* Set a fixed height for the buttons */
+ text-align: center;
+ font-weight:500;
+ border: none; /* Optional: remove the default button border */
+ border-radius: 5px; /* Optional: add rounded corners */
+ background-color: rgba(120, 142, 161, 0.795); /* Optional: change the background color */
+ color: rgb(4, 4, 69); /* Optional: change the text color */
+ cursor: pointer; /* Optional: change cursor to pointer on hover */
+}
+.search:hover{
+ background-color: rgba(4, 35, 82, 0.512); /* Optional: change background color on hover */
+}
+
+.editEmp{
+  margin-top: 0.5ch;
+  margin-left: 0.5ch;
+  margin-bottom: 1.5ch;
+  font-size: 14px; /* Increase font size */
+  width: 200px; /* Set a fixed width for the buttons */
+  height: 30px; /* Set a fixed height for the buttons */
+  text-align: center;
+  font-weight:500;
+  border: none; /* Optional: remove the default button border */
+  border-radius: 5px; /* Optional: add rounded corners */
+  background-color: #7299b4c5;  /* Optional: change the background color */
+  color: rgb(4, 4, 69); /* Optional: change the text color */
+  cursor: pointer; /* Optional: change cursor to pointer on hover */
+ }
+.deleteEmp{
+  margin-top: 0.5ch;
+  margin-left: 0.5ch;
+  margin-bottom: 1.5ch;
+  font-size: 14px; /* Increase font size */
+  width: 250px; /* Set a fixed width for the buttons */
+  height: 30px; /* Set a fixed height for the buttons */
+  text-align: center;
+  font-weight:500;
+  border: none; /* Optional: remove the default button border */
+  border-radius: 5px; /* Optional: add rounded corners */
+  background-color: #7299b4c5; /* Optional: change the background color */
+  color: rgb(4, 4, 69); /* Optional: change the text color */
+  cursor: pointer; /* Optional: change cursor to pointer on hover */
+ }
+ .editEmp:hover{
+  background-color: rgba(104, 158, 240, 0.512); /* Optional: change background color on hover */
+ }
+.deleteEmp:hover{
+  background-color: rgba(187, 11, 11, 0.512); /* Optional: change background color on hover */
+ }
